# oracle-monorepo-near

./: .gitmodules
deployment/: README.md  deploy_oracle_mainnet.sh
oracle/: Cargo.toml
oracle/src/: callback_args.rs  data_request.rs  fee_config.rs  fungible_token.rs  fungible_token_receiver.rs  helpers.rs  lib.rs  logger.rs  oracle_config.rs  requester_handler.rs  resolution_window.rs  storage_manager.rs  target_contract_handler.rs  upgrade.rs  whitelist.rs
oracle/tests/it/: dr_basic_tests.rs  dr_resolution_tests.rs  dr_scenario_tests.rs  main.rs
oracle/tests/it/utils/: account_utils.rs  deposit.rs  lib.rs  oracle_utils.rs  requester_contract_utils.rs  token_utils.rs
requestor-contracts/src/: lib.rs
