[package]
name = "oracle"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = { version = "0.9.0", default-features = false }
serde = "1.0.118"
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="f53105815f5d063b58ab8c25f025823e8301d896" }

[dev-dependencies]
near-sdk-sim = "3.1.0"
token = { path = "./../token" }
request-interface = { path = "./../requester" }